--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <a href="index.html" id="lang-switch" class="py-4 md:py-0">
         <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
       </a>
-      <a href="">39</a>
+     <a href="tel:+393518401998" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">+393518401998</a>
     </div>
   </div>
 </nav>
