--- a/booking.html
+++ b/booking.html
@@ -71,24 +71,41 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
-    <div class="container mx-auto px-6 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-serif">Nest Guesthouse</a>
-      <div class="hidden md:flex space-x-8">
-        <a href="index.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
-        <a href="about.html" class="text-trulli-900 hover:text-trulli-500">About us</a>
-        <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500">Rooms</a>
-        <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 font-medium">Book Now</a>
-        <a href="area.html" class="text-trulli-900 hover:text-trulli-500">Area</a>
-      </div>
-      <button class="md:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+ <!-- Navbar -->
+<nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
+  <div class="container mx-auto px-4 flex justify-between items-center">
+    <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
+
+    <!-- Hamburger Button (Mobile) -->
+    <input type="checkbox" id="menu-toggle" class="hidden">
+    <label for="menu-toggle" id="menu-toggle-label" class="md:hidden focus:outline-none cursor-pointer">
+      <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </label>
+
+    <!-- Navigation Links -->
+    <div id="menu" class="fixed inset-y-0 right-0 w-full bg-white md:static md:w-auto md:bg-transparent flex flex-col items-center justify-center px-4 py-4 h-full md:flex-row md:space-x-6 md:h-auto">
+      <!-- Close Button (Mobile) -->
+      <label for="menu-toggle" id="menu-close-label" class="md:hidden absolute top-4 right-4 cursor-pointer">
+        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
         </svg>
-      </button>
+      </label>
+      <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">About us</a>
+      <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Rooms</a>
+      <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Book Now</a>
+      <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Area</a>
+      <a href="index_it.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
+      </a>
+      <a href="index.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
+      </a>
+     <a href="tel:+393518401998" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">+393518401998</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Booking Header -->
   <div class="pt-32 pb-16 bg-trulli-100">
