--- a/booking.html
+++ b/booking.html
@@ -114,14 +114,15 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
         </label>
+        <a href="index.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Home</a>
         <a href="about.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">About us</a>
         <a href="rooms.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Rooms</a>
         <a href="booking.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Book Now</a>
         <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Area</a>
-        <a href="index_it.html" id="lang-switch" class="py-4 md:py-0">
+        <a href="booking_it.html" id="lang-switch" class="py-4 md:py-0">
           <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
         </a>
-        <a href="index.html" id="lang-switch" class="py-4 md:py-0">
+        <a href="booking.html" id="lang-switch" class="py-4 md:py-0">
           <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
         </a>
         <a href="tel:+393518401998" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">+393518401998</a>
@@ -228,8 +229,8 @@
               <label for="accommodation" class="block text-sm font-medium mb-2">Accommodation Type *</label>
               <select id="accommodation" name="accommodation" class="w-full px-4 py-3 border border-trulli-200 rounded-md focus:outline-none focus:ring-1 focus:ring-trulli-900 focus:border-trulli-900" required>
                 <option value="" disabled selected>Select your preferred suite</option>
-                <option value="suite-giardino">Suite Giardino</option>
-                <option value="suite-panorama">Suite Panorama</option>
+                <option value="Suite Giardino">Suite Giardino</option>
+                <option value="Suite Panorama">Suite Panorama</option>
               </select>
             </div>
             
