--- a/area_it.html
+++ b/area_it.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scopri la zona - Nest Guesthouse</title>
-  <meta name="description" content="Scopri la splendida regione del Lago di Garda che circonda Yours Trulli, dagli antichi borghi alle spiagge incontaminate" />
+  <meta name="description" content="Discover the beautiful Puglia region surrounding Yours Trulli, from ancient towns to pristine beaches" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
-  <link rel="icon" href="static/logo.jpeg" type="image/png">
+  <link rel="icon" href="static/nest_logo copy.jpeg" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -55,26 +55,65 @@
     .image-grid img:hover {
       transform: scale(1.05);
     }
+    /* Checkbox Hack for Menu Toggle */
+    #menu-toggle {
+      display: none;
+    }
+    #menu {
+      display: none;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    #menu-toggle:checked ~ #menu {
+      display: flex;
+      transform: translateX(0);
+    }
+    @media (min-width: 768px) {
+      #menu {
+        display: flex;
+        transform: translateX(0);
+      }
+      #menu-toggle-label, #menu-close-label {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
   <!-- Navbar -->
   <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
-    <div class="container mx-auto px-6 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-serif">Nest Guesthouse</a>
-      <div class="hidden md:flex space-x-8">
-        <a href="index_it.html" class="text-trulli-900 hover:text-trulli-500">Home</a>
-        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500">Chi siamo</a>
-        <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500">Camere</a>
-        <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500">Prenota</a>
-        <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500 font-medium">Zona</a>
-        <a href="area.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
-      </div>
-      <button class="md:hidden">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <div class="container mx-auto px-4 flex justify-between items-center">
+      <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
+
+      <!-- Hamburger Button (Mobile) -->
+      <input type="checkbox" id="menu-toggle" class="hidden">
+      <label for="menu-toggle" id="menu-toggle-label" class="md:hidden focus:outline-none cursor-pointer">
+        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
-      </button>
+      </label>
+
+      <!-- Navigation Links -->
+      <div id="menu" class="fixed inset-y-0 right-0 w-full bg-white md:static md:w-auto md:bg-transparent flex flex-col items-center justify-center px-4 py-4 h-full md:flex-row md:space-x-6 md:h-auto">
+        <!-- Close Button (Mobile) -->
+        <label for="menu-toggle" id="menu-close-label" class="md:hidden absolute top-4 right-4 cursor-pointer">
+          <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+          </svg>
+        </label>
+        <a href="index_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Home</a>
+        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Chi siamo us</a>
+        <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Camere</a>
+        <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Prenota</a>
+        <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Zona</a>
+        <a href="area_it.html" id="lang-switch" class="py-4 md:py-0">
+          <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
+        </a>
+        <a href="area.html" id="lang-switch" class="py-4 md:py-0">
+          <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
+        </a>
+        <a href="tel:+393518401998" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">+393518401998</a>
+      </div>
     </div>
   </nav>
 
