--- a/rooms.html
+++ b/rooms.html
@@ -6,7 +6,7 @@
   <title>Our Rooms Accommodations - Nest Guesthouse</title>
   <meta name="description" content="Explore our unique trulli accommodations, each offering authentic charm with modern comfort" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
-  <link rel="icon" href="static/logo.jpeg" type="image/png">
+  <link rel="icon" href="static/nest_logo copy.jpeg" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -432,7 +432,7 @@
             <p class="mb-2">Via Magellano, 26</p>
             <p class="mb-2">Castelnuovo del Garda 37014, Verona</p>
             <p class="mb-2">+39 3518401998</p>
-            <p>magellanosuite@gmail.com</p>
+            <p>nestguesthouse2025@gmail.com</p>
           </address>
         </div>
         
