--- a/rooms_it.html
+++ b/rooms_it.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Rooms Accommodations - Nest Guesthouse</title>
+  <title>Le nostre camere - Nest Guesthouse</title>
   <meta name="description" content="Explore our unique trulli accommodations, each offering authentic charm with modern comfort" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
   <link rel="icon" href="static/nest_logo copy.jpeg" type="image/png">
