--- a/booking.html
+++ b/booking.html
@@ -361,7 +361,7 @@
             </div>
             <div class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-3 text-white/80"><rect width="20" height="16" x="2" y="4" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
-              <span>magellanosuite@gmail.com</span>
+              <span>nestguesthouse2025@gmail.com</span>
             </div>
             <div class="flex items-center">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-3 text-white/80"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
@@ -483,7 +483,7 @@
             <p class="mb-2">Via Magellano, 26</p>
             <p class="mb-2">Castelnuovo del Garda 37014, Verona</p>
             <p class="mb-2">+39 3518401998</p>
-            <p>magellanosuite@gmail.com</p>
+            <p>nestguesthouse2025@gmail.com</p>
           </address>
         </div>
         
