--- a/area_it.html
+++ b/area_it.html
@@ -579,7 +579,7 @@
             <p class="mb-2">Via Magellano, 26</p>
             <p class="mb-2">37014 Castelnuovo del Garda, Verona</p>
             <p class="mb-2">+39 3518401998</p>
-            <p>magellanosuite@gmail.com</p>
+            <p>nestguesthouse2025@gmail.com</p>
           </address>
         </div>
         
