--- a/index_it.html
+++ b/index_it.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nest Guesthouse - Lago di Garda</title>
-  <meta name="description" content="Vivi l'autentico Lago di Garda nella nostra villa di lusso" />
+  <meta name="description" content="Experience the authentic Garda Lake in our luxurious villa" />
+  <meta name="keywords" content="nestguesthouse">
+  <meta name="google-site-verification" content="google1a3b92520ca0929d" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
-  <link rel="icon" href="static/nest_logo copy.jpeg" type = "image/jpeg">
+  <link rel="icon" href="static/nest_logo copy.jpeg" type="image/jpeg">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -49,29 +51,69 @@
       transform: translateY(-4px);
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
     }
+    /* Checkbox Hack for Menu Toggle */
+    #menu-toggle {
+      display: none;
+    }
+    #menu {
+      display: none;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    #menu-toggle:checked ~ #menu {
+      display: flex;
+      transform: translateX(0);
+    }
+    @media (min-width: 768px) {
+      #menu {
+        display: flex;
+        transform: translateX(0);
+      }
+      #menu-toggle-label {
+        display: none;
+      }
+      #menu-close-label {
+        display: none;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
-    <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
-      <!-- Hamburger Button -->
-      <button id="menu-toggle" class="md:hidden focus:outline-none">
-        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+<!-- Navbar -->
+<nav class="bg-white py-4 sticky top-0 z-50 shadow-sm">
+  <div class="container mx-auto px-4 flex justify-between items-center">
+    <a href="#" class="text-xl md:text-2xl font-serif">Nest Guesthouse</a>
+
+    <!-- Hamburger Button (Mobile) -->
+    <input type="checkbox" id="menu-toggle" class="hidden">
+    <label for="menu-toggle" id="menu-toggle-label" class="md:hidden focus:outline-none cursor-pointer">
+      <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </label>
+
+    <!-- Navigation Links -->
+    <div id="menu" class="fixed inset-y-0 right-0 w-full bg-white md:static md:w-auto md:bg-transparent flex flex-col items-center justify-center px-4 py-4 h-full md:flex-row md:space-x-6 md:h-auto">
+      <!-- Close Button (Mobile) -->
+      <label for="menu-toggle" id="menu-close-label" class="md:hidden absolute top-4 right-4 cursor-pointer">
+        <svg class="w-6 h-6 text-trulli-900" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
         </svg>
-      </button>
-      <!-- Navigation Links -->
-      <div id="menu" class="hidden md:flex md:space-x-6 absolute md:static top-14 left-0 w-full md:w-auto bg-white md:bg-transparent px-4 md:px-0 py-4 md:py-0 flex-col md:flex-row items-center">
-        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Chi siamo</a>
-        <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Camere</a>
-        <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Prenota</a>
-        <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500 py-2 md:py-0">Zona</a>
-        <a href="index.html" id="lang-switch"><img src="static/eng_logo.png" alt="eng Flag" class="w-4 h-4"></a>
-      </div>
+      </label>
+      <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Chi siamo</a>
+      <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Camere</a>
+      <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Prenota</a>
+      <a href="area_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Zona</a>
+      <a href="index_it.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/ita_logo.png" alt="ITA Flag" class="w-4 h-4">
+      </a>
+      <a href="index.html" id="lang-switch" class="py-4 md:py-0">
+        <img src="static/eng_logo.png" alt="ENG Flag" class="w-4 h-4">
+      </a>
+     <a href="tel:+393518401998" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">+393518401998</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Hero -->
   <header class="relative h-[70vh] md:h-screen">
