--- a/booking_it.html
+++ b/booking_it.html
@@ -167,7 +167,7 @@
                     id="check-in"
                     name="check-in"
                     class="w-full px-4 py-3 border border-trulli-200 rounded-md focus:outline-none focus:ring-1 focus:ring-trulli-900 focus:border-trulli-900" 
-                    placeholder="Select date"
+                    placeholder="Seleziona data"
                     required
                   >
                   <div class="absolute right-3 top-1/2 transform -translate-y-1/2 pointer-events-none">
@@ -183,7 +183,7 @@
                     id="check-out"
                     name="check-out"
                     class="w-full px-4 py-3 border border-trulli-200 rounded-md focus:outline-none focus:ring-1 focus:ring-trulli-900 focus:border-trulli-900" 
-                    placeholder="Select date"
+                    placeholder="Seleziona data"
                     required
                   >
                   <div class="absolute right-3 top-1/2 transform -translate-y-1/2 pointer-events-none">
@@ -209,7 +209,7 @@
                 </select>
               </div>
               <div>
-                <label for="children" class="block text-sm font-medium mb-2">Children</label>
+                <label for="children" class="block text-sm font-medium mb-2">Bambini</label>
                 <select id="children" name="children" class="w-full px-4 py-3 border border-trulli-200 rounded-md focus:outline-none focus:ring-1 focus:ring-trulli-900 focus:border-trulli-900">
                   <option value="0" selected>Nessun bambino</option>
                   <option value="1">1 Bambino</option>
@@ -300,7 +300,7 @@
               <label class="flex items-start">
                 <input type="checkbox" name="terms" class="mt-1 mr-3" required>
                 <div>
-                  <span class="block">I agree to the <a href="#" class="text-trulli-900 underline">termini e condizioni</a> *</span>
+                  <span class="block">Acconsento a <a href="#" class="text-trulli-900 underline">termini e condizioni</a> *</span>
                   <span class="text-sm text-trulli-500">Include la politica di cancellazione e i termini di pagamento</span>
                 </div>
               </label>
@@ -441,7 +441,7 @@
         <div class="space-y-6">
           <!-- FAQ Item 1 -->
           <div class="p-6 bg-white rounded-lg shadow-sm">
-            <h3 class="text-xl font-medium mb-3">What is your payment policy?</h3>
+            <h3 class="text-xl font-medium mb-3">Quale è la vostra politica di pagamento?</h3>
             <p class="text-trulli-500">
              Richiediamo un deposito del 30% per confermare la tua prenotazione. Il saldo rimanente è dovuto alla data del tuo arrivo. Il pagamento può essere effettuato con carta di credito, bonifico bancario o Paypal.
             </p>
@@ -449,7 +449,7 @@
           
           <!-- FAQ Item 2 -->
           <div class="p-6 bg-white rounded-lg shadow-sm">
-            <h3 class="text-xl font-medium mb-3">What is your cancellation policy?</h3>
+            <h3 class="text-xl font-medium mb-3">Quale è la vostra politica di cancellazione?</h3>
             <p class="text-trulli-500">
                  Cancellazione gratuita fino a 30 giorni prima dell'arrivo con rimborso completo del deposito. Le cancellazioni tra 30 e 14 giorni prima dell'arrivo perdono il deposito. Le cancellazioni a meno di 14 giorni prima dell'arrivo vengono addebitate per l'importo totale.
             </p>
@@ -457,7 +457,7 @@
           
           <!-- FAQ Item 3 -->
           <div class="p-6 bg-white rounded-lg shadow-sm">
-            <h3 class="text-xl font-medium mb-3">Can I modify my booking after confirmation?</h3>
+            <h3 class="text-xl font-medium mb-3">Posso modificare la mia prenotazione una volta effettuata?</h3>
             <p class="text-trulli-500">
               Sì, le modifiche sono possibili in base alla disponibilità. Contattaci il prima possibile se hai bisogno di cambiare le tue date o aggiungere servizi. Le modifiche apportate meno di 14 giorni prima dell'arrivo potrebbero comportare costi aggiuntivi.
             </p>
