--- a/area.html
+++ b/area.html
@@ -140,13 +140,13 @@
         <div>
           <h2 class="text-3xl md:text-4xl font-serif mb-6">The South of Lake Garda</h2>
           <p class="text-trulli-500 mb-6 leading-relaxed">
-            Nest Guesthouse is located in Castelnuovo del Garda, one of Puglia's most picturesque areas, characterized by rolling hills, ancient olive trees, and the iconic trulli houses. This central location makes it the perfect base to explore the region's many treasures.
+            Nest Guesthouse is located in Castelnuovo del Garda, in one of the picturesque areas of Veneto, amidst rolling hills, ancient olive trees and iconic cities. Zoek een central positie voor de perfect basis om te verkennen en te onderzoeken in de regio.
           </p>
           <p class="text-trulli-500 mb-6 leading-relaxed">
-            Within a short drive, you can discover charming towns like Alberobello, a UNESCO World Heritage site famous for its dense concentration of trulli, or Ostuni, the "White City" perched dramatically on a hill with panoramic views of the countryside.
+            First of all, you can travel by car to the towns of Sirmione such as Sirmione, near the castle in Peschiera del Garda, near the fort Veneziaanse, a UNESCO heritage site.
           </p>
           <p class="text-trulli-500 leading-relaxed">
-            The coast is just 20 minutes away, offering pristine beaches with crystal-clear waters. Inland, you'll find historic sites, nature reserves, and vineyards producing Puglia's renowned wines.
+            The beaches are just 10 minutes away, offering crystal clear waters to cool off. Nearby you will find historic sites, natural wine cellars that produce renowned wines from the area.   </p>
           </p>
         </div>
         <div class="overflow-hidden rounded-lg">
