--- a/rooms_it.html
+++ b/rooms_it.html
@@ -173,8 +173,8 @@
           <div class="flex flex-col justify-between">
             <div>
               <div class="flex justify-between items-center mb-4">
-                <h2 class="text-3xl font-serif">Family Suite</h2>
-                <span class="text-2xl font-serif text-trulli-500">€200 / notte</span>
+                <h2 class="text-3xl font-serif">Suite Familiare</h2>
+                <span class="text-2xl font-serif text-trulli-500">€99 / notte</span>
               </div>
               <p class="text-trulli-500 mb-6 leading-relaxed">
                 Il nostro alloggio più grande e confortevole, la Family Suite comprende un gruppo di trulli collegati con cucina privata e un ampio spazio giardino. Perfetta per famiglie o piccoli gruppi che cercano un'esperienza confortevole.
@@ -286,7 +286,7 @@
             <div>
               <div class="flex justify-between items-center mb-4">
                 <h2 class="text-3xl font-serif">Suite Panorama</h2>
-                <span class="text-2xl font-serif text-trulli-500">€100-200 / notte</span>
+                <span class="text-2xl font-serif text-trulli-500">€85 / notte</span>
               </div>
               <p class="text-trulli-500 mb-6 leading-relaxed">
                 La Suite Panorama offre una perfetta combinazione di fascino rustico e comfort elegante. Questo alloggio intimo è ideale per coppie che cercano privacy e tranquillità.
