--- a/area_it.html
+++ b/area_it.html
@@ -102,7 +102,7 @@
           </svg>
         </label>
         <a href="index_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Home</a>
-        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Chi siamo us</a>
+        <a href="about_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Chi siamo</a>
         <a href="rooms_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Camere</a>
         <a href="booking_it.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Prenota</a>
         <a href="area.html" class="text-trulli-900 hover:text-trulli-500 py-4 md:py-0 text-lg">Zona</a>
