--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-16 items-center">
           <div class="h-full overflow-hidden">
             <div class="aspect-[4/3] w-full overflow-hidden">
-              <img src="static/airbnb17.jpg" alt="Authentic Experience" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
+              <img src="static/main1.jpg" alt="Authentic Experience" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
             </div>
           </div>
           <div class="flex flex-col justify-center">
@@ -185,7 +185,7 @@
           </div>
           <div class="h-full overflow-hidden">
             <div class="aspect-[4/3] w-full overflow-hidden">
-              <img src="static/view_pano.jpg" alt="Nature" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
+              <img src="static/main2.jpg" alt="Nature" class="object-cover w-full h-full hover-lift transform transition-transform duration-[1.8s] hover:scale-105" />
             </div>
           </div>
         </div>
@@ -203,12 +203,12 @@
         </p>
       </div>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-        <div class="overflow-hidden"><img src="static/IMG_3775.jpg" alt="Interior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="static/IMG_3778_copy.jpeg" alt="Exterior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="static/IMG_3783.jpg" alt="Pool" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="static/IMG_3785.jpg" alt="Dining" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="static/IMG_3790.jpg" alt="Bedroom" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
-        <div class="overflow-hidden"><img src="static/airbnb_dec23-16.jpg" alt="Garden" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main31.jpg" alt="Interior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main32.jpg" alt="Exterior" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main33.jpg" alt="Pool" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main34.jpg" alt="Dining" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main35.jpg" alt="Bedroom" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
+        <div class="overflow-hidden"><img src="static/main36.jpg" alt="Garden" class="w-full h-48 md:h-64 object-cover hover-lift transition-transform duration-[1.8s] hover:scale-105" /></div>
       </div>
     </div>
   </section>
