--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         </div>
         <div class="order-1 md:order-2">
           <img 
-            src="static/IMG_3783.jpg" 
+            src="static/aboutus.jpg" 
             alt="Traditional trulli houses" 
             class="rounded-lg shadow-xl w-full h-auto"
           />
