--- a/about_it.html
+++ b/about_it.html
@@ -145,7 +145,7 @@
         </div>
         <div class="order-1 md:order-2">
           <img 
-            src="static/IMG_3783.jpg" 
+            src="static/aboutus.jpg" 
             alt="Tradizionali trulli pugliesi" 
             class="rounded-lg shadow-xl w-full h-auto"
           />
