--- a/rooms.html
+++ b/rooms.html
@@ -139,7 +139,7 @@
           <div class="relative">
             <div class="aspect-[4/3] overflow-hidden rounded-lg">
               <img 
-                src="static/IMG_3778_copy.jpeg" 
+                src="static/family1.jpg" 
                 alt="Trullo Giardino exterior" 
                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
               />
@@ -147,21 +147,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3785.jpg" 
+                  src="static/family2.jpg" 
                   alt="Trullo Giardino pool" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3775.jpg" 
+                  src="static/family3.jpg" 
                   alt="Trullo Giardino bedroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3790.jpg" 
+                  src="static/family4.jpg" 
                   alt="Trullo Giardino bathroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
@@ -251,7 +251,7 @@
           <div class="relative">
             <div class="aspect-[4/3] overflow-hidden rounded-lg">
               <img 
-                src="static/airbnb_dec23-16.jpg" 
+                src="static/debo1.jpg" 
                 alt="Trullo Ulivo exterior" 
                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
               />
@@ -259,21 +259,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-18.jpg" 
+                  src="static/debo2.jpg" 
                   alt="Trullo Ulivo living area" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-25.jpg" 
+                  src="static/debo3.jpg" 
                   alt="Trullo Ulivo bedroom" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-37.jpg" 
+                  src="static/debo4.jpg" 
                   alt="Trullo Ulivo garden" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
