--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="flex flex-col justify-center">
-            <h2 class="text-2xl md:text-4xl font-serif mb-4"> Italian Traditional Villa</h2>
+            <h2 class="text-2xl md:text-4xl font-serif mb-4">Italian Modern Villa</h2>
             <p class="text-trulli-500 text-base md:text-lg leading-relaxed">
               Restored with care, our villa preserves its charm while offering modern amenities.
             </p>
@@ -178,9 +178,9 @@
         <!-- Feature 2 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-16 items-center">
           <div class="flex flex-col justify-center">
-            <h2 class="text-2xl md:text-4xl font-serif mb-4">Immersed in Nature</h2>
+            <h2 class="text-2xl md:text-4xl font-serif mb-4">Relaxing Garden Area</h2>
             <p class="text-trulli-500 text-base md:text-lg leading-relaxed">
-              Surrounded by a beautiful garden, enjoy a serene retreat.
+              Surrounded by a beautiful garden with aromatic plans, enjoy a serene retreat.
             </p>
           </div>
           <div class="h-full overflow-hidden">
