--- a/index_it.html
+++ b/index_it.html
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="flex flex-col justify-center">
-            <h2 class="text-2xl md:text-4xl font-serif mb-4">Villa Italiana Tradizionale</h2>
+            <h2 class="text-2xl md:text-4xl font-serif mb-4">Villa Moderna</h2>
             <p class="text-trulli-500 text-base md:text-lg leading-relaxed">
               Ristrutturata con cura, la nostra villa preserva il suo fascino offrendo al contempo comfort moderni.
             </p>
@@ -178,9 +178,9 @@
         <!-- Feature 2 -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-16 items-center">
           <div class="flex flex-col justify-center">
-            <h2 class="text-2xl md:text-4xl font-serif mb-4">Immersi nella Natura</h2>
+            <h2 class="text-2xl md:text-4xl font-serif mb-4">Area Relax Giardino</h2>
             <p class="text-trulli-500 text-base md:text-lg leading-relaxed">
-              Circondato da un bellissimo giardino, goditi un rifugio sereno.
+              Circondato da un bellissimo giardino con erbe aromatiche, goditi un rifugio sereno.
             </p>
           </div>
           <div class="h-full overflow-hidden">
