--- a/rooms_it.html
+++ b/rooms_it.html
@@ -139,7 +139,7 @@
           <div class="relative">
             <div class="aspect-[4/3] overflow-hidden rounded-lg">
               <img 
-                src="static/IMG_3778_copy.jpeg" 
+                src="static/family1.jpg" 
                 alt="Esterno della Family Suite" 
                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
               />
@@ -147,21 +147,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3785.jpg" 
+                  src="static/family2.jpg" 
                   alt="Piscina della Family Suite" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3775.jpg" 
+                  src="static/family3.jpg" 
                   alt="Camera da letto della Family Suite" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/IMG_3790.jpg" 
+                  src="static/family4.jpg" 
                   alt="Bagno della Family Suite" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
@@ -251,7 +251,7 @@
           <div class="relative">
             <div class="aspect-[4/3] overflow-hidden rounded-lg">
               <img 
-                src="static/airbnb_dec23-16.jpg" 
+                src="static/debo1.jpg" 
                 alt="Esterno della Suite Panorama" 
                 class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
               />
@@ -259,21 +259,21 @@
             <div class="grid grid-cols-3 gap-3 mt-3">
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-18.jpg" 
+                  src="static/debo2.jpg" 
                   alt="Area living della Suite Panorama" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-25.jpg" 
+                  src="static/debo3.jpg" 
                   alt="Camera da letto della Suite Panorama" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
               </div>
               <div class="aspect-[4/3] overflow-hidden rounded-lg">
                 <img 
-                  src="static/airbnb_dec23-37.jpg" 
+                  src="static/debo4.jpg" 
                   alt="Giardino della Suite Panorama" 
                   class="w-full h-full object-cover hover:scale-105 transition-transform duration-1000"
                 />
@@ -302,11 +302,11 @@
                   </div>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
-                    <span>Angolo cottura</span>
+                    <span>Angolo cucina</span>
                   </div>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
-                    <span>1/2 camere da letto</span>
+                    <span>Balcone con vista</span>
                   </div>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
@@ -314,7 +314,7 @@
                   </div>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
-                    <span>1/2 bagni</span>
+                    <span>Bagno privato</span>
                   </div>
                   <div class="flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
@@ -328,7 +328,7 @@
                 <h3 class="text-xl font-medium mb-4">Capacità</h3>
                 <div class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-trulli-500 mr-2"><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
-                  <span>4/8 adulti</span>
+                  <span>4 adulti</span>
                 </div>
               </div>
             </div>
@@ -376,7 +376,7 @@
           <div class="border-b border-trulli-200 pb-6">
             <h3 class="text-xl font-medium mb-3">C'è un soggiorno minimo richiesto?</h3>
             <p class="text-trulli-500">
-              Durante l'alta stagione (giugno-settembre), richiediamo un soggiorno minimo di 3 notti. Durante il resto dell'anno, il soggiorno minimo è di 2 notti. Per i periodi festivi, potrebbero applicarsi minimi diversi.
+              Durante l'alta stagione (giugno-settembre), richiediamo un soggiorno minimo di 2 notti. Durante il resto dell'anno, il soggiorno minimo è di 1 notte. Per i periodi festivi, potrebbero applicarsi minimi diversi.
             </p>
           </div>
           
@@ -385,7 +385,7 @@
             <h3 class="text-xl font-medium mb-3">Come posso raggiungere Nest Guesthouse?</h3>
             <p class="text-trulli-500">
               Le uscite autostradali più vicine sono Peschiera del Garda (A4) e Verona Sud (A12).
-              Gli aeroporti più vicini sono Verona (12 km) e Bergamo (30 km). Possiamo organizzare transfer aeroportuali per un costo aggiuntivo, oppure puoi noleggiare un'auto. Verranno fornite indicazioni dettagliate alla conferma della prenotazione.
+              Gli aeroporti più vicini sono Verona (12 km) e Milano-Bergamo (30 km). Possiamo organizzare transfer aeroportuali per un costo aggiuntivo, oppure puoi noleggiare un'auto. Verranno fornite indicazioni dettagliate alla conferma della prenotazione.
             </p>
           </div>
         </div>
