--- a/rooms.html
+++ b/rooms.html
@@ -119,10 +119,10 @@
           Authentic Accommodation
         </span>
         <h1 class="text-4xl md:text-5xl font-serif mb-6 leading-tight">
-          Our Villa Apartments
+          Our Suites
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
-          Each of our apartments has been meticulously restored to preserve its historical character while providing modern comfort. Choose the perfect accommodation for your authentic Garda Lake experience.
+          Each of our suite has been meticulously restored to preserve its historical character while providing modern comfort. Choose the perfect accommodation for your authentic Garda Lake experience.
         </p>
       </div>
     </div>
