--- a/rooms_it.html
+++ b/rooms_it.html
@@ -119,10 +119,10 @@
           Alloggi Autentici
         </span>
         <h1 class="text-4xl md:text-5xl font-serif mb-6 leading-tight">
-          I Nostri Appartamenti
+          Le Nostre Suite
         </h1>
         <p class="text-lg text-trulli-500 leading-relaxed">
-          Ogni nostro appartamento è stato meticolosamente ristrutturato per preservare il suo carattere storico offrendo al contempo comfort moderno. Scegli l'alloggio perfetto per la tua autentica esperienza sul Lago di Garda.
+          Ogni nostra suite è stato meticolosamente ristrutturato per preservare il suo carattere storico offrendo al contempo comfort moderno. Scegli l'alloggio perfetto per la tua autentica esperienza sul Lago di Garda.
         </p>
       </div>
     </div>
